...
    private lazy var tableView: UITableView = {
        let tableView = UITableView()
        tableView.delegate = self
        tableView.dataSource = self
        tableView.register(RocketListViewCell.self, forCellReuseIdentifier: "RocketListViewCell")
        tableView.tableFooterView = UIView()
        tableView.accessibilityIdentifier = "rocketListTableView"
        return tableView
    }()
    
    private let viewModel: RocketListViewModel
    
    // MARK: - Initialization
...
    }
    
    // MARK: - Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Rockets"
        tableView.pin(to: view)
        placeholderView.delegate = self
        bindViewModel()
        viewModel.onViewReady()
    }
}
...
